fixed alignment on about me

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 /* start of header for css */
 .header {
     display: flex;
-    justify-content: left; 
+    justify-content: left;
 }
 
 
@@ -69,11 +69,12 @@
 
 .biop p {
     font-size: 20px;
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 50px;
+    margin-bottom: 50px;
     justify-content: center;
-    align-items: center;
+    text-align: center;
     display: flex;
+    
 
 }
 
